--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.turboturnip.warwickbrowser.ui.MainActivity" />
         </activity>
+        <activity android:name=".ui.SingleModuleActivity" />
     </application>
 
 </manifest>
